fix css error on mobile about page for correct placement of header

--- a/src/style/MiniAbout.css
+++ b/src/style/MiniAbout.css
@@ -71,8 +71,6 @@
   height: 100%;
 }
 
-
-
 .go-sm-button {
   position: relative;
   width: 90%;
@@ -292,7 +290,7 @@
 }
 
 .sm-mid-bot-row[data-thingSelected="true"] {
-  grid-area: firstRow;
+  grid-area: sectionHeading;
   border-bottom: 1px var(--primaryBlack) dotted;
   box-sizing: border-box;
 }
@@ -521,8 +519,6 @@
   width: 85%;
 }
 
-
-
 .woodworking-svg-bg {
   position: absolute;
   height: 85%;
@@ -549,7 +545,7 @@
   --svgBgAccent: transparent;
   --mannyBgStaticColor: var(--primaryLight);
   --mannyBgStrokeW: 10px;
-  opacity: .5;
+  opacity: 0.5;
 }
 
 .sm-bot-row {
@@ -611,9 +607,9 @@
   position: relative;
 }
 
-.trc-right-dashes { 
-  position: absolute; 
-  left: 0; 
+.trc-right-dashes {
+  position: absolute;
+  left: 0;
   bottom: 20%;
   height: 30%;
   width: 50%;
@@ -686,7 +682,6 @@
   filter: blur(50px);
 }
 
-
 .sm-m-left {
   box-sizing: border-box;
   align-self: flex-end;
@@ -745,7 +740,7 @@
   align-items: center;
   color: var(--primaryWhite);
   font-size: 1.5rem;
-  
+
   /* color: var(--primaryWhite); */
 }
 
@@ -764,7 +759,7 @@
 
 .go-btn-arrow {
   /* filter: invert(.9); */
-  filter: invert(.15);
+  filter: invert(0.15);
   width: 80%;
 }
 
